--- a/index.html
+++ b/index.html
@@ -27,12 +27,17 @@
       var canvas = document.getElementById('myCanvas');
       var context = canvas.getContext('2d');
       function update(){  //metoda update
-      p1.move(/*delta x delta y*/)
+        p1.move(/*delta x delta y*/)
       };
 
       function render(){  //metoda render
         p1.render();
       };
+
+      /*function center(){
+        canvas.width ;
+        canvas.height;
+      };*/
 
       //char
       function char(){
@@ -47,44 +52,57 @@
         this.y+=d_y;
       };
       char.prototype.render=function(){
-        ctx.fillStyle = color;
-        ctx.fillRect(this.x, this.y, this.w_x, this.w_y); //x=pos y=pos w_x=dimetion w_y=dimention
+        context.fillStyle = p1.color;
+        context.fillRect(this.x, this.y, this.w_x, this.w_y); //x=pos y=pos w_x=dimetion w_y=dimention
+        //drawImage(image,x,y)
       };
       //main loop
-      function main(){
-
+      window.main = function () {
+        window.requestAnimationFrame( main );
+        eh();
+        update();
+        render();
+        // Whatever your main loop needs to do.
       };
-      //test
-      // do cool things with the context
-      context.font = '40pt Calibri';
-      context.fillStyle = 'blue';
-      context.fillText('Hello World!', 150, 100);
+      main();
+
+      function splash_s(){
+        context.font = '40pt Calibri';
+        context.fillStyle = 'Black';
+        var str=("Hello " + p1.name + " " + p1.w_x + " " + p1.w_y + " " + p1.color);
+        context.fillText('Hello World!', canvas.width/2-120, canvas.height/2-10);
+      }
+      //int
       var p1 = new char();
-      var str=("Hello " + p1.name + " " + p1.w_x + " " + p1.w_y + " " + p1.color);
+      splash_s();
+      var runing=true;
+      main();
       // events hendler
-      document.addEventListener('keydown', function(event) {
-          if (event.keyCode == 37) {
-              alert('Left was pressed');
-          }
-          else if (event.keyCode == 39) {
-              alert('Right was pressed');
-          }
-          else if (event.keyCode == 38) {
-              alert('Up was pressed');
-          }
-          else if (event.keyCode == 40) {
-              alert('Down was pressed');
-          }
-      }, true);
-    </script>-->
+      function eh(){
+        document.addEventListener('keydown', function(event) {
+            if (event.keyCode == 37) {
+                console.log('Left was pressed');
+            }
+            else if (event.keyCode == 39) {
+                console.log('Right was pressed');
+            }
+            else if (event.keyCode == 38) {
+                console.log('Up was pressed');
+            }
+            else if (event.keyCode == 40) {
+                console.log('Down was pressed');
+            }
+        }, true);
+    }
+    </script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script>
-        var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
+        /*var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
         (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
           g.src='https://www.google-analytics.com/ga.js';
-          s.parentNode.insertBefore(g,s)}(document,'script'));
+          s.parentNode.insertBefore(g,s)}(document,'script'));*/
     </script>
   </body>
 </html>
