--- a/index.html
+++ b/index.html
@@ -9,12 +9,59 @@
 		    <link rel="shortcut icon" href="favicon.ico" />
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="css/bootstrap.css"
+        <script type="text/javascript" charset="utf-8" src="game.js"></script>
+        <script type="text/javascript" charset="utf-8" src="stats.js"></script>
+        <script language="javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js" type="text/javascript"></script>
+        <script>
+
+
+          var CANVAS_WIDTH = 800;
+          var CANVAS_HEIGHT = 500;
+
+          var canvasElement = $("<canvas width='" + CANVAS_WIDTH +
+                                "' height='" + CANVAS_HEIGHT + "'style='"text-align: center;
+                                 border:1px solid #000000;"'></canvas>");
+          var canvas = canvasElement.get(0).getContext("2d");
+          canvasElement.appendTo('body');
+
+
+
+          function rng(){
+            return Math.floor(Math.random() * (255 - 0)) + 0
+          }
+          function hwl() {
+            canvas.font = "40pt Arial";
+            canvas.fillStyle = "rgb("+rng()+","+rng()+","+rng()+")";
+            canvas.fillText('Hello World!',250,250);
+          }
+          var mainloop = function() {
+            hwl();
+        };
+        window.requestAnimationFrame( mainloop );
+          // events hendler
+          function eh(){
+            document.addEventListener('keydown', function(event) {
+                if (event.keyCode == 37) {
+                    console.log('Left was pressed');
+                }
+                else if (event.keyCode == 39) {
+                    console.log('Right was pressed');
+                }
+                else if (event.keyCode == 38) {
+                    console.log('Up was pressed');
+                }
+                else if (event.keyCode == 40) {
+                    console.log('Down was pressed');
+                }
+            }, true);
+        }
+        </script>
   </head>
   <body>
     <div>
       <h1 style="text-align: center;">Canvas</h1>
     </div>
-    <canvas id="myCanvas" width="800" height="500"
+    <!--<canvas id="myCanvas" width="800" height="500"
     style="text-align: center;
      border:1px solid #000000;
      padding-left: 0;
@@ -22,78 +69,8 @@
      margin-left: auto;
      margin-right: auto;
      display: block;
-     "></canvas>
-    <script>
-      var canvas = document.getElementById('myCanvas');
-      var context = canvas.getContext('2d');
-      function update(){  //metoda update
-        p1.move(/*delta x delta y*/)
-      };
+     "></canvas>-->
 
-      function render(){  //metoda render
-        p1.render();
-      };
-
-      /*function center(){
-        canvas.width ;
-        canvas.height;
-      };*/
-
-      //char
-      function char(){
-        this.name="player_1";     //char name
-        this.maxspeed=5;  //max char speed
-        this.w_x=10;      //x dimention
-        this.w_y=10;      //y dimention
-        this.color="white"
-      };
-      char.prototype.move=function(d_x,d_y){
-        this.x+=d_x;
-        this.y+=d_y;
-      };
-      char.prototype.render=function(){
-        context.fillStyle = p1.color;
-        context.fillRect(this.x, this.y, this.w_x, this.w_y); //x=pos y=pos w_x=dimetion w_y=dimention
-        //drawImage(image,x,y)
-      };
-      //main loop
-      window.main = function () {
-        window.requestAnimationFrame( main );
-        eh();
-        update();
-        render();
-        // Whatever your main loop needs to do.
-      };
-      main();
-
-      function splash_s(){
-        context.font = '40pt Calibri';
-        context.fillStyle = 'Black';
-        var str=("Hello " + p1.name + " " + p1.w_x + " " + p1.w_y + " " + p1.color);
-        context.fillText('Hello World!', canvas.width/2-120, canvas.height/2-10);
-      }
-      //int
-      var p1 = new char();
-      splash_s();
-      main();
-      // events hendler
-      function eh(){
-        document.addEventListener('keydown', function(event) {
-            if (event.keyCode == 37) {
-                console.log('Left was pressed');
-            }
-            else if (event.keyCode == 39) {
-                console.log('Right was pressed');
-            }
-            else if (event.keyCode == 38) {
-                console.log('Up was pressed');
-            }
-            else if (event.keyCode == 40) {
-                console.log('Down was pressed');
-            }
-        }, true);
-    }
-    </script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
